--- a/index.html
+++ b/index.html
@@ -219,8 +219,10 @@ cursor: pointer;
 .milestone-message {
   position: absolute;
   top: 70%;
-  right: 12px;
-  left: auto;
+
+  left: 12px;      /* ← 左側に表示 */
+  right: auto;     /* ← 右指定を無効化 */
+
   background: #ffe6ee;
   padding: 14px 18px;
   border-radius: 10px;
