--- a/index.html
+++ b/index.html
@@ -351,13 +351,15 @@ h1 {
     white-space: nowrap;
   }
 
-  .history th:nth-child(3),
-  .history td:nth-child(3),
-  .history th:nth-child(4),
-  .history td:nth-child(4) {
-    width: 64px;
-    font-size: 16px;
-  }
+.history th:nth-child(3),
+.history td:nth-child(3),
+.history th:nth-child(4),
+.history td:nth-child(4) {
+  width: 80px;
+  font-size: 16px;
+  padding-right: 0;
+  text-align: center;   /* ← これだけ追加 */
+}
 
   /* 通過ポイント（縦に読む設計） */
 .history th:nth-child(5),
@@ -384,16 +386,6 @@ h1 {
   .pin-goal,
   img[src*="ise"] { width: 24px; }
 
-  /* ===== スマホ：メッセージ微調整 ===== */
-@media (max-width: 600px) {
-  .milestone-message {
-    top: 80%;
-    left: 12px;
-    right: auto;
-  }
-}
-
-
 
 #inputKm {
   width: 120px;
@@ -414,9 +406,11 @@ h1 {
 .history td:nth-child(3),
 .history td:nth-child(4) {
   text-align: right;
-  font-size: 18px;                 /* ← 数字を大きく */
+  font-size: 18px;
   font-variant-numeric: tabular-nums;
+  font-feature-settings: "tnum" 1;
 }
+
 
 
 /* 未達：半透明（案内はCSSで出さないだけ） */
