--- a/index.html
+++ b/index.html
@@ -254,6 +254,78 @@ cursor: pointer;
   opacity: 1;
 }
 
+#pointDetail {
+  position: absolute;          /* ← fixed をやめる */
+  left: 50%;
+  transform: translateX(-50%); /* ← 縦はJSで制御 */
+
+  width: 94%;
+  max-width: 360px;
+
+  background: #ffe6ee;
+  padding: 16px;
+  border-radius: 14px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+
+  color: #000;
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: left;
+
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+#pointDetail.show {
+  opacity: 1;
+}
+
+
+/* ===== 📱 スマホだけ挙動を切り替える ===== */
+@media (max-width: 600px) {
+  #pointDetail {
+    position: absolute;
+    transform: translate(-50%, -50%);
+  }
+}
+
+/* ヘッダー（タイトル＋×） */
+#pointDetail .point-detail-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#pointDetail .point-detail-header strong {
+  font-size: 16px;
+}
+
+/* ×ボタン */
+#pointDetail .point-detail-close {
+  border: none;
+  background: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+/* 画像 */
+#pointDetail .point-detail-image {
+  display: block;
+  width: 100%;
+  max-width: 140px;        /* ← マッテルモン基準 */
+  margin: 8px auto;
+  border-radius: 10px;
+}
+
+/* テキスト */
+#pointDetail .point-detail-text {
+  margin-top: 6px;
+}
+
+
+
 /* ===== スマホ最適化 ===== */
 @media (max-width: 600px) {
 
@@ -400,6 +472,7 @@ cursor: pointer;
   .pin-goal,
   img[src*="ise"] { width: 24px; }
 
+
 }  /* ← ★ @media はここで終了 */
 
 
@@ -516,31 +589,9 @@ cursor: pointer;
   opacity: 1;
 }
 
-.point-detail-image {
-  width: 100%;
-  max-width: 140px;     /* ← 半分くらいの体感サイズ */
-  margin: 8px auto;
-  display: block;
-  border-radius: 8px;
-}
-
 .point-detail-text {
   line-height: 1.5;
 }
-
-
-/* ===== 📱 オーバーレイ（背景を暗くする） ===== */
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.4); /* ← 暗さはここ */
-  z-index: 40;                  /* pointDetail より下 */
-}
-
-.overlay.hidden {
-  display: none;
-}
-
 
 </style>
 </head>
@@ -612,10 +663,7 @@ stroke-linejoin="round"
 
 <div id="milestoneMessage" class="milestone-message"></div>
 
-<div
-  id="pointDetail"
-  class="milestone-message hidden"
-></div>
+<div id="pointDetail" class="hidden"></div>
 
 
 <!-- 道後温泉：スタート -->
@@ -711,7 +759,18 @@ const points = [
 
 const POINTS_WITH_IMAGE = [
   "マッテルモン",
-  "カッパの石像"
+  "カッパの石像",
+  "おポンプ様",
+  "白狐の湯田温泉足湯",
+  "和尚鯰",
+  "ズッコケ三人組モニュメント",
+  "ありがとう像",
+  "義士あんどん（からくり時計）",
+  "立木音楽堂（カフェ）",
+  "しらさぎ運動公園",
+  "鳥羽水族館（ラッコのメイちゃん）",
+  "イチョウ並木（大台町小滝）",
+  "翠波橋"
 ];
 
 
@@ -734,8 +793,119 @@ const POINT_DETAILS = {
       思わず力が抜ける、旅の途中の小さな出来事です。
     `,
     autoClose: null
+  },
+
+  "おポンプ様": {
+    title: "おポンプ様",
+    img: "oponpu.png",
+    text: `
+      不思議な存在に見守られながら。<br>
+      今日も淡々と、でも確実に。
+    `,
+    autoClose: null
+  },
+
+  "白狐の湯田温泉足湯": {
+    title: "白狐の湯田温泉足湯",
+    img: "shirofox.png",
+    text: `
+      足湯に腰を下ろすイメージで。<br>
+      今日の疲れが、少しずつ抜けていきます。
+    `,
+    autoClose: null
+  },
+
+  "和尚鯰": {
+    title: "和尚鯰",
+    img: "namazu.png",
+    text: `
+      思わず二度見してしまう存在。<br>
+      旅には、こんな出会いもあります。
+    `,
+    autoClose: null
+  },
+
+  "ズッコケ三人組モニュメント": {
+    title: "ズッコケ三人組モニュメント",
+    img: "zukkoke.png",
+    text: `
+      懐かしい気配に、思わず口元が緩みます。<br>
+      少し軽やかな一日です。
+    `,
+    autoClose: null
+  },
+
+  "ありがとう像": {
+    title: "ありがとう像",
+    img: "arigato.png",
+    text: `
+      短い言葉に、少し背中を押されます。<br>
+      今日も一歩ずつ。
+    `,
+    autoClose: null
+  },
+
+  "義士あんどん（からくり時計）": {
+    title: "義士あんどん（からくり時計）",
+    img: "gishi.png",
+    text: `
+      時間になると動き出す、からくり時計。<br>
+      忠臣蔵の町らしい、静かな遊び心に出会います。
+    `,
+    autoClose: null
+  },
+
+  "立木音楽堂（カフェ）": {
+    title: "立木音楽堂（カフェ）",
+    img: "tachiki.png",
+    text: `
+      音楽堂という名前の、静かなカフェ。<br>
+      ひと息つくだけで、気分が少し整います。
+    `,
+    autoClose: null
+  },
+
+  "しらさぎ運動公園": {
+    title: "しらさぎ運動公園",
+    img: "karakuri.png",
+    text: `
+      からくり時計を横目に。<br>
+      今日も堅実にポイント通過。
+    `,
+    autoClose: null
+  },
+
+  "鳥羽水族館（ラッコのメイちゃん）": {
+    title: "鳥羽水族館（ラッコのメイちゃん）",
+    img: "may.png",
+    text: `
+      人気者に、ちょっと元気をもらって。<br>
+      旅は、まだ続きます。
+    `,
+    autoClose: null
+  },
+
+  "イチョウ並木（大台町小滝）": {
+    title: "イチョウ並木（大台町小滝）",
+    img: "icyo.png",
+    text: `
+      まっすぐに続く並木道。<br>
+      歩くリズムと、景色が重なります。
+    `,
+    autoClose: null
+  },
+
+  "翠波橋": {
+    title: "翠波橋",
+    img: "suiha.png",
+    text: `
+      橋の上で深呼吸。<br>
+      川の流れが、歩き続けた時間を映しています。
+    `,
+    autoClose: null
   }
 };
+
 
 
 
@@ -874,21 +1044,21 @@ tr.innerHTML = `
 <td>
 ${rowPassed.map(name => {
   if (POINTS_WITH_IMAGE.includes(name)) {
-    return `<span
-      class="passed-point"
-      style="cursor:pointer;"
-      onclick="showPointDetail('${name}')"
-    >📷 ${name}</span>`;
-  } else {
-    return `<span>${name}</span>`;
-  }
+  return `<span
+    class="passed-point"
+    style="cursor:pointer;"
+    onclick="showPointDetail('${name}')"
+  >📷 ${name}</span>`;
+} else {
+  return `<span>${name}</span>`;
+}
 }).join("／")}
-
 </td>
 <td style="text-align:center">
   <button data-index="${realIndex}">削除</button>
 </td>
 `;
+
 
 
 tbody.appendChild(tr);
@@ -908,7 +1078,18 @@ renderHistory();
 updateEvents();
 });
 });
-}
+
+// 📷 通過ポイント（画像あり）クリック処理 ← ★ここ！
+tbody.querySelectorAll(".passed-point").forEach(span => {
+  span.addEventListener("click", (e) => {
+    e.stopPropagation();        // ← 絶対必要
+    const name = span.dataset.point;
+    showPointDetail(name, span);
+  });
+});
+
+} // ← renderHistory() 終了
+
 
 function createMilestones() {
   const mapWrapper = document.querySelector(".map-wrapper");
@@ -947,27 +1128,31 @@ if (!milestones[0]._el) return;
     }
   });
 
-  // ===== event message =====
-  events.forEach(e => {
-    if (e._shown) return;
+// ===== event message =====
+events.forEach(e => {
+  if (e._shown) return;
 
-    if (total > 0 && total >= e.distanceKm) {
-      const lines = Array.isArray(e.message) ? e.message : [e.message];
+  if (total > 0 && total >= e.distanceKm) {
+    const lines = Array.isArray(e.message) ? e.message : [e.message];
 
-      box.innerHTML = `
-        <strong>${e.point}</strong><br>
-        ${lines.join("<br>")}
-      `;
+    box.innerHTML = `
+      <strong>${e.point}</strong><br>
+      ${lines.join("<br>")}
+    `;
 
-      box.classList.add("show");
+    box.classList.add("show");
 
-      setTimeout(() => {
-        box.classList.remove("show");
-      }, 10000);
+    // ★ 既存タイマーを必ず止める
+    clearTimeout(box._eventTimer);
 
-      e._shown = true;
-    }
-  });
+    // ★ 表示時間（ここだけ触ればOK）
+    box._eventTimer = setTimeout(() => {
+      box.classList.remove("show");
+    }, 9000);   // ← 好きな秒数にしてOK
+
+    e._shown = true;
+  }
+});
 
 
 // ===== 赤ピン 到達判定（kmベース） =====
@@ -1229,7 +1414,7 @@ document.querySelectorAll(".help-btn").forEach(btn => {
 updateRoute();
 updateGoalPin();
 
-// ===== 📷 通過ポイント詳細表示 =====
+
 function showPointDetail(pointName) {
   const box = document.getElementById("pointDetail");
   if (!box) return;
@@ -1237,77 +1422,68 @@ function showPointDetail(pointName) {
   const data = POINT_DETAILS[pointName];
   if (!data) return;
 
+  // ===== 中身 =====
   box.innerHTML = `
     <div class="point-detail-header">
       <strong>${data.title}</strong>
       <button class="point-detail-close" aria-label="閉じる">×</button>
     </div>
-
     <img src="${data.img}" class="point-detail-image">
-
     <div class="point-detail-text">
       ${data.text}
     </div>
   `;
 
+  // ===== 表示位置（常に今の画面中央）=====
+  box.style.left = "50%";
+  box.style.top  = `${window.pageYOffset + window.innerHeight / 2}px`;
+
   box.classList.remove("hidden");
   box.classList.add("show");
-  document.getElementById("overlay").classList.remove("hidden");
 
-
-
-  clearTimeout(box._timer);
-  if (data.autoClose) {
-    box._timer = setTimeout(hidePointDetail, data.autoClose);
-  }
-
-  // ×ボタン
-  box
-    .querySelector(".point-detail-close")
-    .addEventListener("click", hidePointDetail);
-
-  // 中をタップしても閉じない
-  box.addEventListener("click", (e) => {
-    e.stopPropagation();
-  });
-
-  // 外タップ判定を次のイベントから有効にする
+  // ★ 外タップ判定を有効化
   box._outsideReady = false;
   setTimeout(() => {
     box._outsideReady = true;
   }, 0);
+
+  box.querySelector(".point-detail-close")
+     .addEventListener("click", hidePointDetail);
 }
 
-// ===== 📷 通過ポイント詳細を閉じる（共通） =====
+
+
+// ===== 📷 閉じる =====
 function hidePointDetail() {
   const box = document.getElementById("pointDetail");
   if (!box) return;
 
-  clearTimeout(box._timer);
   box.classList.remove("show");
   box.classList.add("hidden");
-
   box._outsideReady = false;
-
-  document.getElementById("overlay").classList.add("hidden");
 }
 
 
-// ===== 📱 外をタップしたら閉じる =====
+// ===== 📱 外タップで閉じる =====
 document.addEventListener("click", (e) => {
   const box = document.getElementById("pointDetail");
   if (!box) return;
 
+  // 表示されていないなら何もしない
   if (!box.classList.contains("show")) return;
+
+  // 📷をクリックした直後は無視（←最重要）
   if (!box._outsideReady) return;
+
+  // カード内クリックは無視
   if (box.contains(e.target)) return;
 
   hidePointDetail();
-});
+}, true); // ← ★ capture フェーズで処理
+
+
 
 </script>
-
-<div id="overlay" class="overlay hidden"></div>
 
 </body>
 </html>
