--- a/index.html
+++ b/index.html
@@ -770,11 +770,24 @@ const POINTS_WITH_IMAGE = [
   "しらさぎ運動公園",
   "鳥羽水族館（ラッコのメイちゃん）",
   "イチョウ並木（大台町小滝）",
-  "翠波橋"
+  "翠波橋",
+
+  // --- 追加分 ---
+  "長浜大橋",
+  "亀ヶ池温泉",
+  "三崎港",
+  "大分別府マラソン",
+  "🔴想夫恋",
+  "メタセコイア並木道",
+  "チロルチョコ アウトレットショップ",
+  "🔴太宰府天満宮",
+  "宮地嶽神社「光の道」",
+  "🔴焼きカレー（門司港）"
 ];
 
 
 const POINT_DETAILS = {
+  // ===== 既存定義 =====
   "マッテルモン": {
     title: "マッテルモン",
     img: "mattelmon.png",
@@ -901,6 +914,107 @@ const POINT_DETAILS = {
     text: `
       橋の上で深呼吸。<br>
       川の流れが、歩き続けた時間を映しています。
+    `,
+    autoClose: null
+  },
+
+  // ===== 追加定義 =====
+  "長浜大橋": {
+    title: "長浜大橋",
+    img: "nagahama.png",
+    text: `
+      長浜大橋を横に眺めながら進みます。<br>
+      赤い橋と川の流れが、旅の途中にそっと寄り添います。
+    `,
+    autoClose: null
+  },
+
+  "亀ヶ池温泉": {
+    title: "亀ヶ池温泉",
+    img: "kamegaike.png",
+    text: `
+      湯に浸かる自分を思い浮かべて。<br>
+      今日の疲れは、ここでほどいていきましょう。
+    `,
+    autoClose: null
+  },
+
+  "三崎港": {
+    title: "三崎港",
+    img: "misakikou.png",
+    text: `
+      三崎港に到達しました。<br>
+      ここからは海を越えて、次の土地へ向かいます。
+    `,
+    autoClose: null
+  },
+
+  "大分別府マラソン": {
+    title: "大分別府マラソン",
+    img: "marason.png",
+    text: `
+      大会当日を思い浮かべて。<br>
+      走る人たちの情熱に、そっと背中を押されます。
+    `,
+    autoClose: null
+  },
+
+  "🔴想夫恋": {
+    title: "🔴想夫恋",
+    img: "soufuren.png",
+    text: `
+      ここで一つのご褒美。<br>
+      香ばしい香りを思い浮かべながら、しっかり味わいましょう。
+    `,
+    autoClose: null
+  },
+
+  "メタセコイア並木道": {
+    title: "メタセコイア並木道",
+    img: "metasekoiya.png",
+    text: `
+      まっすぐ伸びる並木道。<br>
+      呼吸を整えて、静かに進みます。
+    `,
+    autoClose: null
+  },
+
+  "チロルチョコ アウトレットショップ": {
+    title: "チロルチョコ アウトレットショップ",
+    img: "chiroru.png",
+    text: `
+      小さな甘さに、ほっと一息。<br>
+      こういう寄り道も、旅の楽しみです。
+    `,
+    autoClose: null
+  },
+
+  "🔴太宰府天満宮": {
+    title: "🔴太宰府天満宮",
+    img: "dazaifu.png",
+    text: `
+      太宰府天満宮に到達しました。<br>
+      静かに手を合わせ、次の道を見据えます。
+    `,
+    autoClose: null
+  },
+
+  "宮地嶽神社「光の道」": {
+    title: "宮地嶽神社「光の道」",
+    img: "hikarinomichi.png",
+    text: `
+      光の道を思い浮かべて。<br>
+      今日の歩みはしっかり刻まれました。
+    `,
+    autoClose: null
+  },
+
+  "🔴焼きカレー（門司港）": {
+    title: "🔴焼きカレー（門司港）",
+    img: "yakikarei.png",
+    text: `
+      門司港でひと休み。<br>
+      旅の途中で味わう一皿は、格別です。
     `,
     autoClose: null
   }
