--- a/index.html
+++ b/index.html
@@ -772,7 +772,6 @@ const POINTS_WITH_IMAGE = [
   "イチョウ並木（大台町小滝）",
   "翠波橋",
 
-  // --- 追加分 ---
   "長浜大橋",
   "亀ヶ池温泉",
   "三崎港",
@@ -782,12 +781,24 @@ const POINTS_WITH_IMAGE = [
   "チロルチョコ アウトレットショップ",
   "🔴太宰府天満宮",
   "宮地嶽神社「光の道」",
-  "🔴焼きカレー（門司港）"
+  "🔴焼きカレー（門司港）",
+
+  // ===== 今回追加 =====
+  "🔴猟師の天然ジビエ いとう",
+  "🔴柿の葉すし",
+  "🔴高野山奥之院",
+  "🔴金刀比羅宮",
+  "🔴山上銀杏園",
+  "ゴール🎉"
 ];
 
 
 const POINT_DETAILS = {
-  // ===== 既存定義 =====
+
+  // =============================
+  // （既存定義はそのまま）
+  // =============================
+
   "マッテルモン": {
     title: "マッテルモン",
     img: "mattelmon.png",
@@ -918,7 +929,6 @@ const POINT_DETAILS = {
     autoClose: null
   },
 
-  // ===== 追加定義 =====
   "長浜大橋": {
     title: "長浜大橋",
     img: "nagahama.png",
@@ -1017,7 +1027,73 @@ const POINT_DETAILS = {
       旅の途中で味わう一皿は、格別です。
     `,
     autoClose: null
-  }
+  },
+
+
+  // =============================
+  // ===== 今回追加分 =====
+  // =============================
+
+  "🔴猟師の天然ジビエ いとう": {
+    title: "🔴猟師の天然ジビエ いとう",
+    img: "gibie.png",
+    text: `
+      山の恵みを、静かにいただく。<br>
+      土地の力を、そのまま味わう一食です。
+    `,
+    autoClose: null
+  },
+
+  "🔴柿の葉すし": {
+    title: "🔴柿の葉すし",
+    img: "kakinoha.png",
+    text: `
+      柿の葉すしに立ち寄りました。<br>
+      山の恵みが、歩いた距離にそっと寄り添います。
+    `,
+    autoClose: null
+  },
+
+  "🔴高野山奥之院": {
+    title: "🔴高野山奥之院",
+    img: "okunoin.png",
+    text: `
+      静けさの中を、心だけ先に歩かせるような時間。<br>
+      旅の足取りも、少し整いました。
+    `,
+    autoClose: null
+  },
+
+  "🔴金刀比羅宮": {
+    title: "🔴金刀比羅宮",
+    img: "konpira.png",
+    text: `
+      金刀比羅宮に到達。<br>
+      積み重ねた一歩一歩が、ちゃんとここに届いています。
+    `,
+    autoClose: null
+  },
+
+  "🔴山上銀杏園": {
+    title: "🔴山上銀杏園",
+    img: "ginnan.png",
+    text: `
+      山上の銀杏園。<br>
+      季節を思い浮かべるだけで、足取りが軽くなります。
+    `,
+    autoClose: null
+  },
+
+ "ゴール🎉": {
+  title: "ゴール🎉",
+  img: "honkan.png",
+  text: `
+    湯の道巡礼、結願✨<br>
+    歩き続けた距離が、あなたの旅になりました。
+  `,
+  autoClose: null
+}
+
 };
 
 
